--- a/style.css
+++ b/style.css
@@ -49,3 +49,13 @@
 .skills{
     font-size: 20px;
 }
+
+/* Hover effect */
+.infodata:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Shadow effect */
+.infodata {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
