--- a/style.css
+++ b/style.css
@@ -1,61 +1,84 @@
-.body{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+}
+
+/* the above is used to reset the default css styling state */
+
+:root{
+    --bg-color: #080808;
+    --second-bg-color: #131313;
+    --text-color: #ffffff;
+    --main-color: #00ffee;
+}
+
+/* It states and changes the default values in the root lvl and then access them as a global variables " */
+
+html{
+    font-size: 60%;
+    overflow-x: hidden;
+}
+
+body{
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;    
+    width: 100%;
+    padding: 4rem 12% 4rem;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
     display: flex;
-  flex-wrap: wrap;
-  font-family: Helvetica, Sans-Serif;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 5;
 }
 
-#title{
-    padding-left: 2px;
-    color: rgb(36, 137, 173);
-    font-size: 42px;
-    margin-bottom: auto;
+.logo{
+    font-size: 3rem;
+    color: var(--text-color);
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.3s ease;
+    font-size: large;
 }
 
-#hr{
-    color: rgb(36, 137, 173);
-    border-color: rgb(36, 137, 173);
-    height: 2px;
-    background: rgb(36, 137, 173);
+.logo:hover{
+    transform: scale(1.1);
 }
 
-.infodata{
-    font: Helvetica;
-    flex: 1;
-    padding: 20px;
-    border: 4px solid #eaeaea;  
-    background: #eaeaea;
-    margin-left: 20px ;
+.logo span{
+    text-shadow: 0 0 25px var(--main-color);
 }
 
-.main{
-    font: Helvetica;
-    flex: 3;
-    padding: 20px;
-    margin: 10px;
-    margin-right: 95px ;
-
+.navbar a{
+    font-size: 1.8 rem;
+    color: var(--text-color);
+    margin-left: 4rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+    font-size: large;
 }
 
-.par1{
-    font: Helvetica;
-    font-size: 18px;
-}
+.navb a:hover,
+    .navbar a.active{
+        color: var(--main-color);
+        border-bottom: 3px solid var(--main-color);
+    }
 
-.container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.skills{
-    font-size: 20px;
-}
-
-/* Hover effect */
-.infodata:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-/* Shadow effect */
-.infodata {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+#menu-icon{
+    font-size: 3.6rem;
+    color: var(--main-color);
+    display: none;
 }
