--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     --bg-color: #080808;
     --second-bg-color: #131313;
     --text-color: #ffffff;
-    --main-color: #00ffee;
+    --main-color: #008cff;
 }
 
 /* It states and changes the default values in the root lvl and then access them as a global variables " */
@@ -30,7 +30,7 @@ body{
     color: var(--text-color);
 }
 
-.header{
+.header {
     position: fixed;
     top: 0;
     left: 0;    
@@ -44,6 +44,7 @@ body{
     z-index: 5;
 }
 
+
 .logo{
     font-size: 3rem;
     color: var(--text-color);
@@ -53,6 +54,7 @@ body{
     font-size: large;
 }
 
+
 .logo:hover{
     transform: scale(1.1);
 }
@@ -60,6 +62,7 @@ body{
 .logo span{
     text-shadow: 0 0 25px var(--main-color);
 }
+
 
 .navbar a{
     font-size: 1.8 rem;
@@ -71,7 +74,7 @@ body{
     font-size: large;
 }
 
-.navb a:hover,
+.header .navb a:hover,
     .navbar a.active{
         color: var(--main-color);
         border-bottom: 3px solid var(--main-color);
@@ -81,4 +84,120 @@ body{
     font-size: 3.6rem;
     color: var(--main-color);
     display: none;
+} 
+
+section{
+    min-height: 100vh;
+    padding: 10rem 12% 10rem;
+}
+
+.home{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15rem;
+}
+
+.home-content{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    text-align: left;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+span{
+    color: var(--main-color);
+}
+
+.logo span{
+    color: var(--main-color);
+}
+
+.home-content h3{
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 3.5rem;
+}
+
+.home-content h1{
+    font-size: 7rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    line-height: 1;
+}
+
+.home-img{
+    border-radius: 50%;
+}
+
+.home-img img{
+    position: relative;
+    top: 3rem;
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px var(--main-color);
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+}
+
+.home-img img:hover{
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color),
+                0 0 100px var(--main-color);
+}
+
+.home-content p{
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.8;
+    max-width: 1000px;
+}
+
+.social-icons a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.5rem;
+    height: 4.5rem;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    font-size: 2.5rem;
+    border-radius: 50%;
+    color: var(--main-color);
+    margin: 3rem 1.5rem 0rem 0;
+    transition: 0.3 ease-in-out;
+}
+
+.social-icons a:hover{
+    color: var(--main-color);
+    transform: scale(1.3)translateY(-5px);
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+}
+
+.btn{
+    display: inline-flex;
+    padding: 1rem 2.8rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color: #080808;
+    border: 2px solid transparent;
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+
+.btn:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 50px var(--main-color);
+}
+
+.btn-group{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
 }
