--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ span{
     font-size: 2.5rem;
     border-radius: 50%;
     color: var(--main-color);
-    margin: 3rem 1.5rem 0rem 0;
+    margin: 3rem 1.5rem 3rem 0;
     transition: 0.3 ease-in-out;
 }
 
@@ -175,6 +175,7 @@ span{
     transform: scale(1.3)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
+    background-color: transparent;                          /* FIX */
 }
 
 .btn{
@@ -184,7 +185,7 @@ span{
     box-shadow: 0 0 25px var(--main-color);
     border-radius: 4rem;
     font-size: 1.6rem;
-    color: #080808;
+    color: black;
     border: 2px solid transparent;
     letter-spacing: 0.1rem;
     font-weight: 600;
@@ -200,4 +201,17 @@ span{
     display: flex;
     align-items: center;
     gap: 1.5rem;
+}
+
+.btn-group a:nth-of-type(2){
+    background-color: black;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 25px transparent;
+}
+
+.btn-group a:nth-of-type(2):hover{
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+    color: black;
 }
