--- a/style.css
+++ b/style.css
@@ -181,14 +181,14 @@ span{
     margin: 3rem 1.5rem 3rem 0;
     transition: 0.3 ease-in-out;
 }
-
+/* 
 .social-icons a:hover{
     color: var(--main-color);
     transform: scale(1.3)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
     background-color: transparent;                          /* FIX */
-}
+} */
 
 .btn{
     display: inline-flex;
